[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BNMPy"
version = "0.0.1"
authors = [
  { name="Boris Aguilar", email="boris.aguilar@isbscience.org" },
]
description = "Boolean network models in python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IlyaLab/BNMPy"
"Bug Tracker" = "https://github.com/IlyaLab/BNMPy/issues"

[tool.setuptools]
package-dir = {"" = "src"}
