[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KGBN"
version = "0.0.1"
authors = [
  { name="Boris Aguilar", email="boris.aguilar@isbscience.org" },
]
description = "Boolean network models in python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "igraph",
    "pyvis",
    "matplotlib",
    "scipy>=1.15.2",
    "pyswarms>=1.3.0",
    "boolean"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IlyaLab/KGBN"
"Bug Tracker" = "https://github.com/IlyaLab/KGBN/issues"

[tool.setuptools]
package-dir = {"" = "src"}
